[gd_scene load_steps=6 format=3 uid="uid://c0ri8eb2c04dq"]

[ext_resource type="Script" path="res://Music Volume.gd" id="1_ltspv"]
[ext_resource type="Script" path="res://Scenes/Options Menu.gd" id="1_vynna"]
[ext_resource type="FontFile" uid="uid://pwg2u1lrabc3" path="res://Fonts/Fairy Font.ttf" id="2_6lbwl"]
[ext_resource type="Texture2D" uid="uid://c7vjhi35m78nu" path="res://Art/Button5.png" id="2_i53x6"]
[ext_resource type="Script" path="res://SFX Volume.gd" id="5_d3qnu"]

[node name="Options Menu Node" type="Node"]
script = ExtResource("1_vynna")
optionsMenuFont = ExtResource("2_6lbwl")

[node name="Options Menu Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 30.0
offset_right = 40.0
offset_bottom = 53.0
grow_horizontal = 2

[node name="Back Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -230.0
offset_right = 8.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
icon = ExtResource("2_i53x6")

[node name="Back Text" type="Label" parent="Back Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Resolution Text" type="Label" parent="."]
offset_left = 800.0
offset_top = 200.0
offset_right = 840.0
offset_bottom = 223.0

[node name="Resolution Drop Down Color" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -340.0
offset_right = -21.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resolution Drop Down Menu" type="OptionButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -340.0
offset_right = 45.0
offset_bottom = -320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Music Volume Text" type="Label" parent="."]
offset_left = 790.0
offset_top = 300.0
offset_right = 830.0
offset_bottom = 323.0

[node name="Music Volume Slider" type="HSlider" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -240.0
offset_right = -2.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltspv")

[node name="Music Volume Percentage" type="Label" parent="Music Volume Slider"]
layout_mode = 0
offset_left = 110.0
offset_top = 12.0
offset_right = 150.0
offset_bottom = 35.0

[node name="SFX Volume Text" type="Label" parent="."]
offset_left = 790.0
offset_top = 400.0
offset_right = 830.0
offset_bottom = 423.0

[node name="SFX Volume Slider" type="HSlider" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -140.0
offset_right = -2.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_d3qnu")

[node name="SFX Volume Percentage" type="Label" parent="SFX Volume Slider"]
layout_mode = 0
offset_left = 110.0
offset_top = 12.0
offset_right = 150.0
offset_bottom = 35.0

[connection signal="mouse_entered" from="Back Button" to="." method="IfBackButtonIsHoveredByMouse"]
[connection signal="mouse_exited" from="Back Button" to="." method="IfBackButtonIsExitedByMouse"]
[connection signal="pressed" from="Back Button" to="." method="IfBackButtonIsPressed"]
[connection signal="item_selected" from="Resolution Drop Down Menu" to="." method="IfResolutionDropDownMenuIsModified"]
